Changelog for plone.i18n

    (name of developer listed in brackets)

plone.i18n - 1.0.6 Unreleased

    - Changed the default normalization of characters used in Scandinavian
      languages to meet the most common rules. This is based on a discussion
      with translators from all Scandinavian countries.
      [hannosch]

    - Added a subdomain language negotiator (e.g. de.plone.org).
      [stefan]

plone.i18n - 1.0.5 Released May 22, 2008

    - Added a new max_length argument to the normalize method. This allows you
      to override the default values for the maximum length on a call basis.
      [hannosch, fschulze]

    - Added a new MAX_URL_LENGTH constant used by the URL normalizer. It
      defaults to 255.
      [hannosch]

    - Added '`' to the list of dangerous chars, which will be removed by the
      url and be replaced with a dash by the file name normalizer now.
      [hannosch, mj]

plone.i18n - 1.0.4 Released April 19, 2008

    - If a dot was used in a url, the url was not lowercased. This closes
      http://dev.plone.org/plone/ticket/7961.
      [hannosch]

plone.i18n - 1.0.3 Released February 13, 2008

    - Updating the flag/language listings. Updating readme to include the flag
      mapping logic. This closes http://dev.plone.org/plone/ticket/7441.
      [limi]

    - Adding all the Arabic-speaking countries with their respective flags, and
      adding a generic flag to represent Arabic in general (verified to be OK with
      two independent, native residents).
      [limi]

    - Added tests for the filename and url request adapters. We have now 100%
      test coverage.
      [hannosch]

    - Wrote tests for the locale-aware id normalizer and fixed a bug in it.
      [hannosch]

    - Added more tests.
      [hannosch]

    - Removed unused and untested 'native' from country information.
      [hannosch]

    - Don't allow double quotes in normalized urls.
      This closes http://dev.plone.org/archetypes/ticket/764.